<resources>
    <string name="app_name">Tymo</string>
    <string name="facebook_app_id">1167785553307401</string>
    <string-array name="array_week_days_first_letter">
        <item>S</item>
        <item>T</item>
        <item>Q</item>
        <item>Q</item>
        <item>S</item>
        <item>S</item>
        <item>D</item>
    </string-array>
    <string-array name="array_months_short">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>
    <string-array name="array_who_can_invite">
        <item>Somente administradores</item>
        <item>Somente convidados</item>
        <item>Qualquer um pode entrar</item>
    </string-array>
    <string-array name="array_who_can_invite_show">
        <item>Somente administradores podem convidar</item>
        <item>Somente convidados podem convidar</item>
        <item>Qualquer um pode entrar</item>
    </string-array>
    <string-array name="array_privacy">
        <item>Todos os usuários</item>
        <item>Somente meus contatos</item>
    </string-array>
    <string-array name="array_repeat_type">
        <item>Nunca</item>
        <item>Diariamente</item>
        <item>Semanalmente</item>
        <item>Mensalmente</item>
    </string-array>
    <string-array name="array_contact_delete">
        <item>Excluir contato</item>
    </string-array>
    <string-array name="array_pending_request_accept_ignore">
        <item>Aceitar</item>
        <item>Ignorar</item>
    </string-array>
    <string-array name="array_who_will_be_signalized">
        <item>Todos os meus contatos</item>
        <item>Escolher</item>
    </string-array>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda</string>
    <string name="tuesday">Terça</string>
    <string name="wednesday">Quarta</string>
    <string name="thursday">Quinta</string>
    <string name="friday">Sexta</string>
    <string name="saturday">Sábado</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="about_birth_date">Data de nascimento</string>
    <string name="about_description">Descrição</string>
    <string name="about_facebook_text">Os dados abaixo foram importados do Facebook e não podem ser alterados. Eles são sincronizados automaticamente.</string>
    <string name="about_full_name">Nome completo</string>
    <string name="about_gender">Gênero</string>
    <string name="about_info_to_contact_example">Instagram, Facebook, Email, LinkedIn, etc.</string>
    <string name="about_info_to_contact">Informações para contato</string>
    <string name="about_modify_profile_photo">Alterar foto do perfil</string>
    <string name="about_surname">Sobrenome</string>
    <string name="about_where_lives">Local onde mora</string>
    <string name="about_where_studied">Onde estudou</string>
    <string name="about_where_works">Onde trabalha</string>
    <string name="about_years">%1$d anos</string>
    <string name="about">Sobre</string>
    <string name="act_guests">Convidados</string>
    <string name="act_menu_what_is_it">O que é?</string>
    <string name="act_menu_where_and_when">Onde e quando?</string>
    <string name="act_menu_who_goes">Quem vai?</string>
    <string name="act_not_found">Atividade não encontrada!</string>
    <string name="act_people_selected">Pessoas selecionadas</string>
    <string name="act_privacy">Pública</string>
    <string name="act_tags">TAGS de Interesses (mín. 1)</string>
    <string name="act_who_can_invite">Quem pode convidar?</string>
    <string name="act">Atividade</string>
    <string name="action_import">Importar</string>
    <string name="add_date_hour">Add. Data/Hora</string>
    <string name="add_guest_btn">Adicionar</string>
    <string name="add_image_loaded">Imagem carregada</string>
    <string name="add_image">Adicionar imagem</string>
    <string name="add_local">Adicionar local</string>
    <string name="add_title">Add. Título</string>
    <string name="add">Adicionar</string>
    <string name="administrator_make">Tornar Administrador</string>
    <string name="administrator_new">Novo Administrador: %1$s</string>
    <string name="administrator">Administrador</string>
    <string name="advance">Avançar</string>
    <string name="agenda_status_need_invitation">Você precisa ser convidado para poder encaixar!</string>
    <string name="agenda_status_past">Já acabou. Você não pode mais encaixar :(</string>
    <string name="apply">Aplicar</string>
    <string name="back_without_saving">Você tem alterações não salvas. Tem certeza que deseja sair?</string>
    <string name="back">Voltar</string>
    <string name="block_user">Bloquear usuário</string>
    <string name="blocked_users">Usuários Bloqueados</string>
    <string name="cancel">Cancelar</string>
    <string name="card_birthday_text_1">Aniversariantes (%1$d)</string>
    <string name="card_birthday_text_2">Comemore esta data especial :)</string>
    <string name="card_free_time_compare_text">Crie com os usuários comparados:</string>
    <string name="card_free_time_text">Crie nesse intervalo de tempo:</string>
    <string name="card_holidays_text">Feriados e Datas Comemorativas</string>
    <string name="check_email_for_instructions">Verifique seu email para mais instruções</string>
    <string name="clean_all">Limpar tudo</string>
    <string name="clean">Limpar</string>
    <string name="close">Fechar</string>
    <string name="commitments_of_the_day_all_already_finished">Todos os seus compromissos já terminaram</string>
    <string name="commitments_of_the_day_already_happened">Já passou</string>
    <string name="commitments_of_the_day_happening_now">Acontecendo agora</string>
    <string name="commitments_of_the_day_is_happening">Está acontecendo</string>
    <string name="commitments_of_the_day_qty">%1$d compromissos</string>
    <string name="commitments_of_the_day_starts_at_one">Inicia às %1$s:%2$s</string>
    <string name="commitments_of_the_day_starts_at">Iniciam às %1$s:%2$s</string>
    <string name="commitments_of_the_day_will_happen">Vai acontecer</string>
    <string name="commitments_of_the_day">Compromissos do Dia</string>
    <string name="commitments">Compromissos</string>
    <string name="compare_agendas">Comparar Agendas</string>
    <string name="compare_people_selected">Selecionados</string>
    <string name="compare">Comparar</string>
    <string name="confirm">Confirmar</string>
    <string name="contact_confirmation_question_add">Você tem certeza que deseja adicionar %1$s à sua lista de contatos?</string>
    <string name="contact_confirmation_question_block">Você tem certeza que deseja bloquear %1$s?</string>
    <string name="contact_confirmation_question_delete">Você tem certeza que deseja excluir %1$s?</string>
    <string name="contact_confirmation_question_ignore_request">%1$s quer participar da sua rede de contatos. Você tem certeza que deseja ignorar esse pedido?</string>
    <string name="contact_confirmation_question_unblock">Você tem certeza que deseja desbloquear %1$s?</string>
    <string name="contact_deleted">Contato excluído</string>
    <string name="contact_disfavorited">%1$s desfavoritado</string>
    <string name="contact_favorited">%1$s favoritado</string>
    <string name="contacts_of">Contatos de %1$s</string>
    <string name="contacts_qty_one">1 contato</string>
    <string name="contacts_qty">%1$d contatos</string>
    <string name="my_reminders_qty_one">1 nota</string>
    <string name="my_reminders_qty">%1$d notas</string>
    <string name="create_activity_recover_with_repeat_text">Atividade resgatada possui repetições. Deseja criar com as repetições da original?</string>
    <string name="create_activity">Criar atividade</string>
    <string name="create_flag">Criar sinalizador</string>
    <string name="create_reminder">Criar nota</string>
    <string name="create">Criar</string>
    <string name="created_by_me">Criado por mim</string>
    <string name="created_by">Criado por %1$s</string>
    <string name="creator">Criador</string>
    <string name="customize_piece_personalize">Escolha um dos ícones abaixo</string>
    <string name="customize">Atualizar</string>
    <string name="date_end">Término</string>
    <string name="date_format_daily_01">Todo dia</string>
    <string name="date_format_daily_02">Todo dia às %1$s:%2$s</string>
    <string name="date_format_daily_03">Todo dia até %1$s:%2$s</string>
    <string name="date_format_daily_04">Todo dia de %1$s:%2$s até %3$s:%4$s</string>
    <string name="date_format_weekly_01">Toda semana, %1$s</string>
    <string name="date_format_weekly_02">Toda semana, %1$s às %2$s:%3$s</string>
    <string name="date_format_weekly_03">Toda semana, %1$s até %2$s:%3$s</string>
    <string name="date_format_weekly_04">Toda semana, %1$s de %2$s:%3$s até %4$s:%5$s</string>
    <string name="date_format_weekly_05">Toda semana, de %1$s até %2$s</string>
    <string name="date_format_weekly_06">Toda semana, de %1$s às %2$s:%3$s até %4$s</string>
    <string name="date_format_weekly_07">Toda semana, de %1$s até %2$s às %3$s:%4$s</string>
    <string name="date_format_weekly_08">Toda semana, de %1$s às %2$s:%3$s até %4$s às %5$s:%6$s</string>
    <string name="date_format_monthly_01">Todo mês, dia %1$s</string>
    <string name="date_format_monthly_02">Todo mês, dia %1$s às %2$s:%3$s</string>
    <string name="date_format_monthly_03">Todo mês, dia %1$s até %2$s:%3$s</string>
    <string name="date_format_monthly_04">Todo mês, dia %1$s de %2$s:%3$s até %4$s:%5$s</string>
    <string name="date_format_monthly_05">Todo mês, do dia %1$s até dia %2$s</string>
    <string name="date_format_monthly_06">Todo mês, do dia %1$s às %2$s:%3$s até dia %4$s</string>
    <string name="date_format_monthly_07">Todo mês, do dia %1$s até dia %2$s às %3$s:%4$s</string>
    <string name="date_format_monthly_08">Todo mês, do dia %1$s às %2$s:%3$s até dia %4$s às %5$s:%6$s</string>
    <string name="date_format_repeat">(de %1$s/%2$s/%3$d à %4$s/%5$s/%6$d)</string>
    <string name="login_connect_with_facebook">Conectar com o Facebook</string>
    <string name="login_forgot_password">Esqueceu sua senha?</string>
    <string name="login_forgot_text_1">Esqueceu seus dados de login?</string>
    <string name="login_register_facebook_incomplete_text_1">Conexão realizada com sucesso</string>
    <string name="login_register_facebook_incomplete_text_2">Complete as informações abaixo:</string>
    <string name="login">Entrar</string>
    <string name="password_actual">Senha atual</string>
    <string name="password_new_again">Digite novamente a nova senha</string>
    <string name="password_new">Nova senha</string>
    <string name="progress_updating">Atualizando...</string>
    <string name="register_birthday">Data de nascimento</string>
    <string name="register_day">Dia</string>
    <string name="register_email">Email</string>
    <string name="register_full_name">Nome Completo</string>
    <string name="register_gender">Gênero</string>
    <string name="register_month">Mês</string>
    <string name="register_password">Senha</string>
    <string name="register_photo">Foto</string>
    <string name="register_year">Ano</string>
    <string name="signin">Cadastre-se</string>
    <string name="update">Alterar</string>
</resources>