<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Login2Activity">

    <include
        android:id="@+id/actionBar"
        layout="@layout/action_bar_register" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/facebookErrorText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/login_register_facebook_incomplete_text_1"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/facebookErrorText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/login_register_facebook_incomplete_text_2"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="30dp"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/photoBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_add" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_photo"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />

                <View
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:background="@drawable/bg_shape_oval_white_corners" />
            </RelativeLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white_opacity_10"
                android:hint="@string/register_full_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white_opacity_10"
                android:hint="@string/register_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white_opacity_10"
                android:hint="@string/register_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/birthDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/register_birthday"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/birthdayBox"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/birthDay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_login_edit_box"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="@string/register_day"
                    android:lines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/birthMonth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_login_edit_box"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="@string/register_month"
                    android:lines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/birthYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_login_edit_box"
                    android:clickable="true"
                    android:gravity="center"
                    android:hint="@string/register_year"
                    android:lines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/genderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/register_gender"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:layout_marginBottom="20dp"
                android:id="@+id/genderPicker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white_opacity_10"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textSize="16sp"
                android:textStyle="normal"
                app:ms_arrow_tint="@color/white"
                app:ms_background_color="@color/deep_purple_400_light"
                app:ms_dropdown_height="wrap_content"
                app:ms_dropdown_max_height="120dp"
                app:ms_text_color="@color/white" />

            <TextView
                android:id="@+id/advanceButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btn_login_advance"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/advance"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <include
        layout="@layout/progress_loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:visibility="gone" />
</RelativeLayout>

