<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Login2Activity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_login_logo" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/white_opacity_10"
                android:hint="@string/register_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/white_opacity_10"
                android:hint="@string/register_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_login_advance"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="end"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:lines="1"
                android:text="@string/login_forgot_text_1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/facebookLoginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_facebook"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/login_connect_with_facebook"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signinButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_signin"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/signin"
                android:textColor="@color/deep_purple_400"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <include
        android:id="@+id/progressBox"
        layout="@layout/progress_loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>

