<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/actionBar"
        layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionBar"
        android:orientation="vertical">

        <EditText
            android:id="@+id/passwordActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_act_edit_box"
            android:hint="@string/password_actual"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="10dp"
            android:textColor="@color/grey_600"
            android:textColorHint="@color/grey_400"
            android:textSize="14sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_act_edit_box"
            android:orientation="vertical">

            <EditText
                android:id="@+id/passwordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/password_new"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="10dp"
                android:textColor="@color/grey_600"
                android:textColorHint="@color/grey_400"
                android:textSize="14sp"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/horizontal_line_height"
                android:background="@color/horizontal_line" />

            <EditText
                android:id="@+id/passwordNewAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/password_new_again"
                android:inputType="textPassword"
                android:lines="1"
                android:padding="10dp"
                android:textColor="@color/grey_600"
                android:textColorHint="@color/grey_400"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <TextView
            android:id="@+id/updatingButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_accept"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_clean"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/cancel"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line_height"
            android:layout_marginTop="10dp"
            android:background="@color/horizontal_line" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/login_forgot_password"
            android:textColor="@color/deep_purple_400"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/progressBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressIcon"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:text="@string/progress_updating"
                android:textColor="@color/grey_600"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/progress_loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>